build: sync README.md with profile

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,3 +32,12 @@ jobs:
             PUBLISH_BRANCH: master
             PUBLISH_DIR: ./public
             commit_message: ${{ github.event.head_commit.message }}
+    
+      - name: Deploy Profile
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+            PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+            EXTERNAL_REPOSITORY: Clarivy/Clarivy
+            PUBLISH_BRANCH: master
+            PUBLISH_DIR: ./public
+            commit_message: ${{ github.event.head_commit.message }}
